feat: implement transaction service with categories and transactions management
- Add TransactionServiceApplication as the main application entry point.
- Create JwtProperties for JWT configuration.
- Implement SecurityConfig for security settings and JWT filter integration.
- Develop WebConfig for custom argument resolver.
- Create CategoryController and TransactionController for handling API requests.
- Define DTOs for Category and Transaction entities.
- Implement JPA entities for Category, Transaction, and SpendingPattern.
- Create repositories for Category and Transaction entities.
- Implement services for Category and Transaction management with exception handling.
- Add JWT authentication filter for securing endpoints.
- Implement global exception handling for API responses.
- Create SQL migration scripts for initializing database schema and sample data.
- Configure application properties for database and service settings.